MS2/error2.txt
a1ms2.c: In function ‘main’:
a1ms2.c:24:9: warning: braces around scalar initializer [enabled by default]
         {1024, "Shaggy Yanson", {"CELL","3048005191"} },
         ^
a1ms2.c:24:9: warning: (near initialization for ‘pets[0].phone’) [enabled by default]
a1ms2.c:24:9: warning: initialization from incompatible pointer type [enabled by default]
a1ms2.c:24:9: warning: (near initialization for ‘pets[0].phone’) [enabled by default]
a1ms2.c:24:9: warning: excess elements in scalar initializer [enabled by default]
a1ms2.c:24:9: warning: (near initialization for ‘pets[0].phone’) [enabled by default]
a1ms2.c:25:9: warning: braces around scalar initializer [enabled by default]
         {1032, "Puglsey Yanson", {"CELL","3048005191"} },
         ^
a1ms2.c:25:9: warning: (near initialization for ‘pets[1].phone’) [enabled by default]
a1ms2.c:25:9: warning: initialization from incompatible pointer type [enabled by default]
a1ms2.c:25:9: warning: (near initialization for ‘pets[1].phone’) [enabled by default]
a1ms2.c:25:9: warning: excess elements in scalar initializer [enabled by default]
a1ms2.c:25:9: warning: (near initialization for ‘pets[1].phone’) [enabled by default]
a1ms2.c:26:9: warning: braces around scalar initializer [enabled by default]
         {1040, "Beans Maulin", {"HOME","3649155831"} },
         ^
a1ms2.c:26:9: warning: (near initialization for ‘pets[2].phone’) [enabled by default]
a1ms2.c:26:9: warning: initialization from incompatible pointer type [enabled by default]
a1ms2.c:26:9: warning: (near initialization for ‘pets[2].phone’) [enabled by default]
a1ms2.c:26:9: warning: excess elements in scalar initializer [enabled by default]
a1ms2.c:26:9: warning: (near initialization for ‘pets[2].phone’) [enabled by default]
a1ms2.c:27:9: warning: braces around scalar initializer [enabled by default]
         {1048, "Banjo Codi", {"TBA",{'\0'}} },
         ^
a1ms2.c:27:9: warning: (near initialization for ‘pets[3].phone’) [enabled by default]
a1ms2.c:27:9: warning: initialization from incompatible pointer type [enabled by default]
a1ms2.c:27:9: warning: (near initialization for ‘pets[3].phone’) [enabled by default]
a1ms2.c:27:9: warning: braces around scalar initializer [enabled by default]
a1ms2.c:27:9: warning: (near initialization for ‘pets[3].phone’) [enabled by default]
a1ms2.c:27:9: warning: excess elements in scalar initializer [enabled by default]
a1ms2.c:27:9: warning: (near initialization for ‘pets[3].phone’) [enabled by default]
a1ms2.c:28:9: warning: braces around scalar initializer [enabled by default]
         {1056, "Rover Davidov", {"WORK","7934346809"} }
         ^
a1ms2.c:28:9: warning: (near initialization for ‘pets[4].phone’) [enabled by default]
a1ms2.c:28:9: warning: initialization from incompatible pointer type [enabled by default]
a1ms2.c:28:9: warning: (near initialization for ‘pets[4].phone’) [enabled by default]
a1ms2.c:28:9: warning: excess elements in scalar initializer [enabled by default]
a1ms2.c:28:9: warning: (near initialization for ‘pets[4].phone’) [enabled by default]
core.c: In function ‘displayFormattedPhone’:
core.c:31:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
 {
 ^
core.c:41:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
 {
 ^
core.c:49:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
 {
 ^
core.c:71:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
 {
 ^
core.c:99:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
 {
 ^
core.c:126:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
 {
 ^
core.c:160:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
 {
 ^
core.c:207:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
 {
 ^
core.c:248:1: error: expected ‘{’ at end of input
 }
 ^
In file included from clinic.c:24:0:
clinic.h: In function ‘displayFormattedPhone’:
clinic.h:46:1: warning: empty declaration [enabled by default]
 struct Phone
 ^
clinic.h:55:1: warning: empty declaration [enabled by default]
 struct Patient
 ^
clinic.h:64:1: warning: empty declaration [enabled by default]
 struct ClinicData
 ^
clinic.c:34:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
 {
 ^
clinic.c:42:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
 {
 ^
clinic.c:68:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
 {
 ^
clinic.c:106:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
 {
 ^
clinic.c:151:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
 {
 ^
clinic.c:195:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
 {
 ^
clinic.c:216:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
 {
 ^
clinic.c:275:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
 {
 ^
clinic.c:318:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
 {
 ^
clinic.c:339:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
 {
 ^
clinic.c:383:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
 {
 ^
clinic.c:412:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
 {
 ^
clinic.c:441:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
 {
 ^
clinic.c:460:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
 {
 ^
clinic.c:481:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
 {
 ^
clinic.c:497:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
 {
 ^
In file included from clinic.c:22:0:
core.h:64:6: error: old-style parameter declarations in prototyped function definition
 void displayFormattedPhone(const char phone[])
      ^
clinic.c:543:1: error: expected ‘{’ at end of input
 }
 ^
